Prepare for Java 11
Signed-off-by: André Silva <andre15andre@hotmail.com>

--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -296,6 +296,7 @@
             <id>noNopol</id>
             <activation>
                 <jdk>[1.9,1.16)</jdk>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
