--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>se.kth.castor</groupId>
             <artifactId>sorald</artifactId>
-            <version>17f106c8e7b3aea25542966410c0b26c2e6c2e43-SNAPSHOT</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>fr.inria.repairnator</groupId>
@@ -220,6 +220,7 @@
             <id>noNopol</id>
             <activation>
                 <jdk>[1.9,1.16)</jdk>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
