--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>repairnator-root</artifactId>
         <groupId>fr.inria.repairnator</groupId>
@@ -14,7 +15,10 @@
             <id>tdurieux-maven-repository-snapshot</id>
             <name>tdurieux.github.io maven-repository</name>
             <url>https://tdurieux.github.io/maven-repository/snapshots/</url>
-            <snapshots><enabled>true</enabled><updatePolicy>always</updatePolicy></snapshots>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
 
         </repository>
         <repository>
@@ -129,6 +133,22 @@
             <artifactId>exceptionparser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>fr.inria.gforge.spirals</groupId>
+            <artifactId>npefix</artifactId>
+            <version>0.7</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>exceptionparser</groupId>
+            <artifactId>exceptionparser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -191,6 +211,7 @@
                 <dependency>
                     <groupId>fr.inria.gforge.spirals</groupId>
                     <artifactId>nopol</artifactId>
+                    <!--Jan 13, 2020, 2:07 PM GMT-->
                     <version>0f47cdb2556b8003d717c62325fef4dbf09a2bae</version>
                 </dependency>
             </dependencies>
@@ -204,6 +225,7 @@
                 <dependency>
                     <groupId>fr.inria.gforge.spirals</groupId>
                     <artifactId>nopol</artifactId>
+                    <!--Jan 13, 2020, 2:07 PM GMT-->
                     <version>0f47cdb2556b8003d717c62325fef4dbf09a2bae</version>
                     <exclusions>
                         <exclusion>
