--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -220,6 +220,7 @@
             <id>noNopol</id>
             <activation>
                 <jdk>[1.9,1.16)</jdk>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
