--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -178,20 +178,6 @@
             <id>releases codedance on Github</id>
             <url>https://tdurieux.github.io/maven-repository/releases/</url>
         </repository>
-        <repository>
-            <!-- for gzoltar -->
-            <id>sachaproject.gforge.inria.fr-release</id>
-            <name>Maven Repository for Spoon Release</name>
-            <url>http://sachaproject.gforge.inria.fr/repositories/releases/
-            </url>
-            <snapshots />
-        </repository>
-        <repository>
-            <id>gforge.inria.fr-snapshot</id>
-            <name>Maven Repository for Spoon Snapshot</name>
-            <url>http://maven.inria.fr/artifactory/spoon-public-snapshot/</url>
-            <snapshots />
-        </repository>
     </repositories>
 
     <distributionManagement>
@@ -362,5 +348,58 @@
 
             </build>
         </profile>
-    </profiles>
+        <profile>
+          <id>release</id>
+          <build>
+            <plugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                  <execution>
+                    <id>attach-sources</id>
+                    <goals>
+                      <goal>jar-no-fork</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
+              
+              <plugin>
+                <!-- Warning: there is another block maven-javadoc-plugin above -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                  <doclint>none</doclint>
+                </configuration>
+                <executions>
+                  <execution>
+                    <id>attach-javadocs</id>
+                    <goals>
+                      <goal>jar</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
+              
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                  <execution>
+                    <id>sign-artifacts</id>
+                    <phase>verify</phase>
+                    <goals>
+                      <goal>sign</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
+            </plugins>
+          </build>
+        </profile>
+      </profiles>
 </project>
