Fix jenkins maven repo
Signed-off-by: André Silva <andre15andre@hotmail.com>

--- a/src/repairnator-core/pom.xml
+++ b/src/repairnator-core/pom.xml
@@ -9,6 +9,13 @@
 
     <artifactId>repairnator-core</artifactId>
 
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
