Add description and url to repairnator-root
Signed-off-by: André Silva <andre15andre@hotmail.com>

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -7,6 +7,8 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
     <name>repairnator-root</name>
+    <description>Software development bot that automatically repairs build failures on continuous integration.</description>
+    <url>https://github.com/eclipse/repairnator</url>
     <inceptionYear>2017</inceptionYear>
     
     <licenses>
