--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>org.inria.sacha.automaticRepair</groupId>
             <artifactId>astor</artifactId>
-            <version>1.1.0</version><!-- last version on Central -->
+            <version>1.1.0</version><!-- last version on Maven Central -->
         </dependency>
         <dependency>
             <groupId>fr.inria.gforge.spirals</groupId>
