--- a/src/docker-images/pipeline-dockerimage/Dockerfile
+++ b/src/docker-images/pipeline-dockerimage/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.6.1-jdk-8
+FROM maven:3.6.1-jdk-11
 
 LABEL Description="Repairnator Pipeline docker image" Vendor="Spirals" Version="0.0.0"
 
@@ -9,6 +9,7 @@ COPY configure_git.sh /root/
 COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
 COPY ODSmodel.bin /root/
+COPY repairnator-pipeline.jar /root/repairnator-pipeline.jar
 
 RUN apt-get update 
 RUN apt-get install xmlstarlet apt-utils cloc libgomp1 -y
@@ -17,7 +18,7 @@ RUN echo `xmlstarlet sel -t -v '//latest' maven-metadata.xml` > /root/version.in
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
 RUN /root/configure_git.sh 
-RUN /root/build_repairnator.sh
+#RUN /root/build_repairnator.sh
 
 ENV M2_HOME=$MAVEN_HOME
 ENV GITHUB_OAUTH=
