direct-pipeline-runner added

--- a/src/docker-images/pipeline-dockerimage/Dockerfile
+++ b/src/docker-images/pipeline-dockerimage/Dockerfile
@@ -8,7 +8,8 @@ COPY logback.xml /root/
 COPY configure_git.sh /root/
 COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
-COPY ODSmodel.bin /root/
+#COPY ODSmodel.bin /root/
+COPY repairnator-pipeline.jar /root/
 
 RUN apt-get update 
 RUN apt-get install xmlstarlet apt-utils cloc libgomp1 -y
@@ -16,7 +17,7 @@ RUN curl -O -s https://oss.sonatype.org/content/repositories/snapshots/fr/inria/
 RUN echo `xmlstarlet sel -t -v '//latest' maven-metadata.xml` > /root/version.ini
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
-RUN /root/configure_git.sh 
+RUN /root/configure_git.sh
 RUN /root/build_repairnator.sh # This script builds the latest version available on central.
 #COPY repairnator-pipeline.jar /root/repairnator-pipeline.jar # If you want to bypass it, and use a built jar, uncomment this line and comment the one above.
 
@@ -43,6 +44,7 @@ ENV GITHUB_USERNAME=
 ENV GITHUB_USEREMAIL=
 ENV EXPERIMENTAL_PLUGIN_REPOS=
 ENV CREATE_PR=0
+ENV CREATE_FORK=0
 
 # NOOP = regular repairnator, KUBERNETES = will fetch build id from activeMQ.
 ENV LISTEN_MODE=NOOP
