Comment local build Dockerfile
Signed-off-by: André Silva <andre15andre@hotmail.com>

--- a/src/docker-images/pipeline-dockerimage/Dockerfile
+++ b/src/docker-images/pipeline-dockerimage/Dockerfile
@@ -9,7 +9,6 @@ COPY configure_git.sh /root/
 COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
 COPY ODSmodel.bin /root/
-COPY repairnator-pipeline.jar /root/repairnator-pipeline.jar
 
 RUN apt-get update 
 RUN apt-get install xmlstarlet apt-utils cloc libgomp1 -y
@@ -18,7 +17,8 @@ RUN echo `xmlstarlet sel -t -v '//latest' maven-metadata.xml` > /root/version.in
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
 RUN /root/configure_git.sh 
-#RUN /root/build_repairnator.sh
+RUN /root/build_repairnator.sh # This script builds the latest version available on central.
+#COPY repairnator-pipeline.jar /root/repairnator-pipeline.jar # If you want to bypass it, and use a built jar, uncomment this line and comment the one above.
 
 ENV M2_HOME=$MAVEN_HOME
 ENV GITHUB_OAUTH=
