--- a/src/docker-images/pipeline-dockerimage/Dockerfile
+++ b/src/docker-images/pipeline-dockerimage/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.6.1-jdk-8
+FROM maven:3.6.1-jdk-11
 
 LABEL Description="Repairnator Pipeline docker image" Vendor="Spirals" Version="0.0.0"
 
@@ -17,7 +17,8 @@ RUN echo `xmlstarlet sel -t -v '//latest' maven-metadata.xml` > /root/version.in
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
 RUN /root/configure_git.sh 
-RUN /root/build_repairnator.sh
+RUN /root/build_repairnator.sh # This script builds the latest version available on central.
+#COPY repairnator-pipeline.jar /root/repairnator-pipeline.jar # If you want to bypass it, and use a built jar, uncomment this line and comment the one above.
 
 ENV M2_HOME=$MAVEN_HOME
 ENV GITHUB_OAUTH=
