--- a/src/repairnator-core/pom.xml
+++ b/src/repairnator-core/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>docker-client</artifactId>
             <version>8.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.28</version>
+        </dependency>
     </dependencies>
 </project>
