--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>se.kth.castor</groupId>
             <artifactId>sorald</artifactId>
-            <version>0.3.0</version>
+            <version>0.5.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -91,6 +91,10 @@
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -134,12 +138,22 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>org.inria.sacha.automaticRepair</groupId>
             <artifactId>astor</artifactId>
             <version>20190919</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.java-json-tools</groupId>
@@ -170,6 +184,10 @@
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -237,6 +255,12 @@
                     <artifactId>nopol</artifactId>
                     <!--Mar 18, 2021, 2:06 PM GMT-->
                     <version>689e97eab451a671378b3fd55f790a39ce0d21d3</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.osgi.service</groupId>
+                            <artifactId>org.osgi.service.prefs</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
@@ -256,6 +280,10 @@
                         <exclusion>
                             <groupId>com.sun</groupId>
                             <artifactId>tools</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.osgi.service</groupId>
+                            <artifactId>org.osgi.service.prefs</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
