--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -40,6 +40,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
@@ -83,17 +89,16 @@
             <version>3.0.15</version>
             <scope>provided</scope>
         </dependency>
-
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
         <dependency>
             <groupId>org.inria.sacha.automaticRepair</groupId>
             <artifactId>astor</artifactId>
             <version>1.1.0</version><!-- last version on Maven Central -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>fr.inria.gforge.spirals</groupId>
@@ -104,6 +109,10 @@
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -263,6 +272,12 @@
                     <artifactId>nopol</artifactId>
                     <!--Mar 18, 2021, 2:06 PM GMT-->
                     <version>689e97eab451a671378b3fd55f790a39ce0d21d3</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.osgi.service</groupId>
+                            <artifactId>org.osgi.service.prefs</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
@@ -282,6 +297,10 @@
                         <exclusion>
                             <groupId>com.sun</groupId>
                             <artifactId>tools</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.osgi.service</groupId>
+                            <artifactId>org.osgi.service.prefs</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
