updating dependencies for maven

--- a/src/repairnator-jenkins-plugin/pom.xml
+++ b/src/repairnator-jenkins-plugin/pom.xml
@@ -101,6 +101,7 @@
               <artifactId>maven-hpi-plugin</artifactId>
               <configuration>
                   <disabledTestInjection>true</disabledTestInjection>
+                  <minimumJavaVersion/>
               </configuration>
           </plugin>
           <plugin>
