--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.5</version>
+            <version>3.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -233,29 +233,22 @@
 	      <pluginManagement>
 	        <plugins>
                 <plugin>
-	                <groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven-plugin-plugin</artifactId>
-	                <version>3.6.1</version>
-	                <configuration>
-	                    <goalPrefix>repair</goalPrefix>
-	                    <skipErrorNoDescriptorsFound>true
-	                    </skipErrorNoDescriptorsFound>
-	                </configuration>
-	                <executions>
-	                    <execution>
-	                        <id>mojo-descriptor</id>
-	                        <goals>
-	                            <goal>descriptor</goal>
-	                        </goals>
-	                    </execution>
-	                    <execution>
-	                        <id>help-goal</id>
-	                        <goals>
-	                            <goal>helpmojo</goal>
-	                        </goals>
-	                    </execution>
-	                </executions>
-	            </plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>3.6.3</version>
+                    <executions>
+                        <execution>
+                            <id>mojo-descriptor</id>
+                            <goals>
+                                <goal>descriptor</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+                    </configuration>
+                </plugin>
+
 	          </plugins>
 	      </pluginManagement>
     </build>
@@ -315,7 +308,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-invoker-plugin</artifactId>
-                        <version>3.0.0</version>
+                        <version>3.4.0</version>
                         <configuration>
                             <debug>true</debug>
                             <cloneProjectsTo>${project.build.directory}/it
