--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -60,6 +60,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
             <version>3.5.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -235,7 +236,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-plugin-plugin</artifactId>
-                    <version>3.6.4</version>
+                    <version>3.6.2</version>
                     <executions>
                         <execution>
                             <id>mojo-descriptor</id>
