providing scope on pom file for maven-core dependency

--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -72,6 +72,7 @@
             <artifactId>maven-core</artifactId>
             <!--do not upgrade to >= 3.6.0, as it will cause a compatibility issue with other guava dependencies-->
             <version>3.5.4</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
