--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -66,6 +66,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.5.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
