--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -124,6 +124,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-compat</artifactId>
             <version>3.2.5</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
