--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -27,6 +27,8 @@
         <java.test.version>1.8</java.test.version>
 
         <npefix.version>0.7</npefix.version>
+        <!--do not upgrade to >= 3.6.0, as it will cause a compatibility issue with other guava dependencies-->
+        <maven.version>3.5.4</maven.version>
     </properties>
 
     <scm>
@@ -42,7 +44,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13.1</version>
         </dependency>
 
         <dependency>
@@ -124,7 +126,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.7.1</version>
+            <version>3.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -188,6 +190,15 @@
             </resource>
         </resources>  
 	      <plugins>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.8.1</version>
+                  <configuration>
+                      <source>1.8</source>
+                      <target>1.8</target>
+                  </configuration>
+              </plugin>
 	          <plugin>
 	              <!-- used for accessing the dependency versions at runtime -->
 	              <groupId>org.codehaus.mojo</groupId>
@@ -219,6 +230,7 @@
 	              </configuration>
 	          </plugin>
 	          <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
 	              <artifactId>maven-assembly-plugin</artifactId>
 	              <version>3.1.1</version>
 	              <configuration>
@@ -233,7 +245,7 @@
                   <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-plugin-plugin</artifactId>
-                      <version>3.6.1</version>
+                      <version>3.8.1</version>
                       <configuration>
                           <goalPrefix>repair</goalPrefix>
                           <skipErrorNoDescriptorsFound>true
@@ -246,6 +258,7 @@
                                   <goal>descriptor</goal>
                               </goals>
                           </execution>
+
                           <execution>
                               <id>help-goal</id>
                               <goals>
