--- a/src/pom.xml
+++ b/src/pom.xml
@@ -178,7 +178,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <argLine>${argLine}</argLine>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
