--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
   name: repairnator-build
   on :
     push:
-      branches: [ main ]
-    pull_request:
-      branches: [ main ]
+      branches:
+        - master
+        - patch-filter-test
   jobs:
       build:
         runs-on: ubuntu-latest
