--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>7</version>
+        <version>9</version>
     </parent>
+
 
     <groupId>fr.inria.gforge.spirals</groupId>
     <artifactId>repair-maven-plugin</artifactId>
@@ -27,6 +27,8 @@
         <java.test.version>1.8</java.test.version>
 
         <npefix.version>0.7</npefix.version>
+        <!--do not upgrade to >= 3.6.0, as it will cause a compatibility issue with other guava dependencies-->
+        <maven.version>3.5.4</maven.version>
     </properties>
 
     <scm>
@@ -40,31 +42,34 @@
     <dependencies>
 
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.maven.plugin-tools</groupId>
-            <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.5</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
             <version>3.5.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.5.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <!--do not upgrade to >= 3.6.0, as it will cause a compatibility issue with other guava dependencies-->
             <version>3.5.4</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -83,17 +88,16 @@
             <version>3.0.15</version>
             <scope>provided</scope>
         </dependency>
-
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
         <dependency>
             <groupId>org.inria.sacha.automaticRepair</groupId>
             <artifactId>astor</artifactId>
-            <version>1.1.0</version><!-- last version on Maven Central -->
+            <version>2.0.0</version><!-- last version on Maven Central -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>fr.inria.gforge.spirals</groupId>
@@ -105,6 +109,10 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-simple</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.osgi.service</groupId>
+                    <artifactId>org.osgi.service.prefs</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -112,6 +120,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-compat</artifactId>
             <version>3.2.5</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -181,6 +190,15 @@
             </resource>
         </resources>  
 	      <plugins>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.8.1</version>
+                  <configuration>
+                      <source>1.8</source>
+                      <target>1.8</target>
+                  </configuration>
+              </plugin>
 	          <plugin>
 	              <!-- used for accessing the dependency versions at runtime -->
 	              <groupId>org.codehaus.mojo</groupId>
@@ -212,6 +230,7 @@
 	              </configuration>
 	          </plugin>
 	          <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
 	              <artifactId>maven-assembly-plugin</artifactId>
 	              <version>3.1.1</version>
 	              <configuration>
@@ -222,32 +241,33 @@
 	          </plugin>   
 	      </plugins>
 	      <pluginManagement>
-	        <plugins>
-                <plugin>
-	                <groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven-plugin-plugin</artifactId>
-	                <version>3.6.1</version>
-	                <configuration>
-	                    <goalPrefix>repair</goalPrefix>
-	                    <skipErrorNoDescriptorsFound>true
-	                    </skipErrorNoDescriptorsFound>
-	                </configuration>
-	                <executions>
-	                    <execution>
-	                        <id>mojo-descriptor</id>
-	                        <goals>
-	                            <goal>descriptor</goal>
-	                        </goals>
-	                    </execution>
-	                    <execution>
-	                        <id>help-goal</id>
-	                        <goals>
-	                            <goal>helpmojo</goal>
-	                        </goals>
-	                    </execution>
-	                </executions>
-	            </plugin>
-	          </plugins>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-plugin-plugin</artifactId>
+                      <version>3.8.1</version>
+                      <configuration>
+                          <goalPrefix>repair</goalPrefix>
+                          <skipErrorNoDescriptorsFound>true
+                          </skipErrorNoDescriptorsFound>
+                      </configuration>
+                      <executions>
+                          <execution>
+                              <id>mojo-descriptor</id>
+                              <goals>
+                                  <goal>descriptor</goal>
+                              </goals>
+                          </execution>
+
+                          <execution>
+                              <id>help-goal</id>
+                              <goals>
+                                  <goal>helpmojo</goal>
+                              </goals>
+                          </execution>
+                      </executions>
+                  </plugin>
+              </plugins>
 	      </pluginManagement>
     </build>
 
@@ -263,6 +283,12 @@
                     <artifactId>nopol</artifactId>
                     <!--Mar 18, 2021, 2:06 PM GMT-->
                     <version>689e97eab451a671378b3fd55f790a39ce0d21d3</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.osgi.service</groupId>
+                            <artifactId>org.osgi.service.prefs</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
@@ -283,6 +309,10 @@
                             <groupId>com.sun</groupId>
                             <artifactId>tools</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <groupId>org.osgi.service</groupId>
+                            <artifactId>org.osgi.service.prefs</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
             </dependencies>
@@ -296,7 +326,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-invoker-plugin</artifactId>
-                        <version>3.0.0</version>
+                        <version>3.4.0</version>
                         <configuration>
                             <debug>true</debug>
                             <cloneProjectsTo>${project.build.directory}/it
